@@ -1,3 +1,10 @@
+MJ (adding changes by Spyros Voulgaris) 15/02/2005
+- OverlayNetwork had bugs: degree and getNeighbours did not conform
+  to the contract that only those links count for which both ends
+  are up. Fixed that. this means, degree(i) will return the number of
+  neighbors that are up, and will return 0 if node i is down. Similarly,
+  getNeighbours(i) returns an empty list if node i is down.
+
 MJ 02/02/2005
 - peersim.vetor.Normalizer now handles all zero vectors by throwing
   an exception.
